--- a/project-webperf.html
+++ b/project-webperf.html
@@ -33,7 +33,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>Thanks for taking this class!</strong> You are awesome for investing time and energy into your future :) We love making classes for you!
+        <strong>Thanks for taking this class!</strong> You are very awesome for investing time and energy into your future :) We love making classes for you!
       </div>
 
       <div class="content">
